# ad-nope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  build.rs  config.toml  example_config.toml
.github/workflows/: docker-publish.yml
src/: config.rs  db.rs  init.rs  lib.rs  logger.rs  main.rs  resolver.rs  server.rs  stats.rs
src/api/: db_stats_source.rs  in_memory_stats.rs  memory.rs  mod.rs  source.rs  sqlite.rs
src/engine/: blocklist_manager.rs  domain_matcher.rs  manager.rs  matcher.rs  mod.rs  state.rs  traits.rs
src/logger/: console_sink.rs  memory_sink.rs  mod.rs  sqlite_sink.rs  types.rs
src/resolver/: mod.rs  parallel.rs  round_robin.rs  sequential.rs  single.rs  types.rs
src/server/: dns_request_handler.rs  handler.rs  mod.rs  types.rs
tests/: integration_logging.rs  integration_sqlite_sink.rs  integration_tests.rs  lint_check.rs  re_resolution_test.rs
ui/: index.html
